dark mode issues fixed ✅✅✅

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -90,6 +90,7 @@
   justify-content: flex-end;
   align-items: center;
   flex-direction: column;
+  z-index: 100;
 
   padding: 1rem;
 
@@ -154,6 +155,7 @@
     border-radius: 50%;
     background-color: #cbcbcb;
     margin: 0.5rem;
+    z-index: 100;
 
     transition: background-color 0.2s ease-in-out;
 
