--- a/frontend/src/container/Header/Header.scss
+++ b/frontend/src/container/Header/Header.scss
@@ -1,22 +1,8 @@
 #home {
-  position: relative;
-  background-size: cover;
-  background-repeat: repeat;
-  background-position: center;
-
   .app__wrapper {
     padding: 0;
 
-    .copyright {
-      display: none;
-    }
   }
-}
-
-.dark{  background: url("../../assets/bgIMGdark.png");
-}
-
-.light{  background: url("../../assets/bgIMG.png");
 }
 
 .app__header {
