--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,4 +17,8 @@
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
+  user-select: none;
+  -webkit-user-drag: none;
+  transition: background-color,color 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
